# os2mo

./: .bowerrc  .coveragerc  .dockerignore  .editorconfig  .env  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .integration-test-meta.v1.yml  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  .readthedocs.yml  .releaserc.yaml  .rules.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Gruntfile.js  Jenkinsfile  Makefile  NEWS.md  NEWS.rst  Pipfile  README.md  README.rst  RELEASE.md  RELEASE.md.template  REUSE.toml  SECURITY.md  TODO.md  alembic.ini  asd.sql  bower.json  catalog-info.yaml  check-reuse-versions.yml  (+37 more)
backend/: .coveragerc  .flaskenv  .test_durations  CHANGELOG.md  README.rst  RELEASE.md  alembic.ini  flask.sh  lmao.py  manage.py  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-lint.in  requirements-lint.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py
backend/.jenkins/: 0-clean.sh  1-build.sh  2-checks.sh  3-tests.sh  4-deploy.sh  common.sh
backend/alembic/: env.py  script.py.mako
backend/alembic_helpers/: __init__.py  function.py  sequence.py
backend/data-sets/: README.rst  minimal.sql  small.sql
backend/mora/: .gitignore  __init__.py  access_log.py  amqp.py  app.py  async_util.py  audit.py  cli.py  common.py  conf_db.py  config.py  db_extensions.json  db_structure.py  default-settings.toml  depends.py  exceptions.py  health.py  http.py  log.py  lora.py  main.py  mapping.py  metrics.py  object_store.py  readonly.py  request_scoped_globals.py  request_wide_bulking.py  reset_conf_db.py  settings.py  testing.py  triggers.py  user_settings.json  util.py  validator.py
backend/oio_rest/: __main__.py  app.py  authentication.py  config.py  custom_exceptions.py  default-settings.toml  klassifikation.py  kubernetes.py  main.py  metrics.py  oio_base.py  organisation.py  restrictions.py  utils.py  validate.py  views.py
backend/os2mo-http-trigger-protocol/: .gitlab-ci.yml  README.md  pyproject.toml
backend/ramodels/: __init__.py  base.py  exceptions.py
backend/tests/: __init__.py  cases.py  conftest.py  db_testing.py  hypothesis_utils.py  lorapatch.py  test_57754.py  test_accesslog.py  test_address_handlers.py  test_amqp.py  test_api.py  test_app_check_config.py  test_auditlog.py  test_auth.py  test_autocomplete.py  test_cafe.py  test_configuration_options.py  test_configuration_settings.py  test_cpr.py  test_create_orgfunk.py  test_create_orgunit.py  test_dangling_foreignkey.py  test_db_models.py  test_details.py  test_docs.py  test_dual_events.py  test_endpoint_uniqueness.py  test_equivalence_address_detail_terminate.py  test_events.py  test_graphiql.py  test_handler_reading_orgfunkreadinghandler.py  test_health.py  test_importing.py  test_integration.py  test_integration_address.py  test_integration_association.py  test_integration_authenticated_user.py  test_integration_autocomplete.py  test_integration_class.py  test_integration_configuration_settings.py  (+73 more)
backend/tools/: files.py  upload.py
docs/: .conventional_commit.config  .static_changelog.md  AddressSearch.md  AddressSearchTemplate.md  ButtonSubmit.md  ContactChannelInput.md  ContactChannelMultiple.md  DatePicker.md  DatePickerStartEnd.md  EngagementTitle.md  EngagementType.md  HelloWorld.md  Loading.md  Makefile  OrganisationPicker.md  OrganisationUnitPicker.md  OrganisationUnitTypeSelect.md  PageNotFound.md  TheHistory.md  TheLeftMenu.md  TheNavbar.md  TheSearchBar.md  Treeview.md  TreeviewItem.md  WorkflowButton.md  Worklog.md  amqp.rst  api.md  api.rst  apidoc.rst  architecture.rst  auth.rst  backend.rst  base.md  changelog.md.j2  cli.rst  conf.py  cookbook.rst  dev.rst  errorcodes.rst  (+16 more)
docs/api/: address.rst  api.rst  authentication.rst  backend.rst  cpr.rst  detail_reading.rst  detail_writing.rst  details.rst  employee.rst  exports.rst  facet.rst  frontend.rst  integration-data.rst  itsystem.rst  organisation.rst  orgunit.rst  reading.rst  related_unit.rst  rest.rst  sso.rst  triggers.rst  user_configuration.rst  validate.rst  writing.rst
docs/architecture/: facets.rst  os2mo.drawio  overview.rst  system.rst
docs/blueprints/: authentication.rst  engagement.rst  organisation.rst  z_legacy.rst
docs/dev/: auth.rst  configuration.rst  conventions.rst  facets.rst  getting-started.rst  operating-mo.rst  release.rst  settings.rst  tests.rst  triggers.rst  user_configuration.rst
docs/examples/: employees.md
docs/graphics/: MORaModuler6.xml  MORaModuler9.xml
docs/lora/: lora.md  lora_shared.md
docs/mo/: details.md  mo.md  mo_shared.md  shared.md
docs/modules-to-doc/: addr.rst  importing.rst  lora.rst  rest-api.rst  util.rst
docs/operation/: auth.rst  cookbook.rst  manual.rst  settings.rst
docs/src/: changelog.md  index.md
docs/static/: MO_manual.odt  SSL-certifikat vejledning.odt  Vejledning til STSOrgSync v3.docx  Vejledning til tilslutning af OS2MO på Serviceplatformen som anvendersystem.docx
docs/stylesheets/: extra.css
docs/tests/: base.md  lora.md  mo.md
docs/vuedoc/: App.md  ButtonSubmit.md  Employee.md  EmployeeDetail.md  EmployeeDetailTabs.md  InfoBox.md  LandingPage.md  LoginPage.md  MenuItem.md  MoAddMany.md  MoAddressEntry.md  MoAddressPicker.md  MoAddressSearch.md  MoAddressSearchField.md  MoAddressSearchTemplate.md  MoAssociationEntry.md  MoBase.md  MoCollapse.md  MoConfirmCheckbox.md  MoCpr.md  MoCprResult.md  MoCprSearch.md  MoDatePicker.md  MoDatePickerRange.md  MoEmployeeAddressEntry.md  MoEmployeeCreate.md  MoEmployeeDetail.md  MoEmployeeLeave.md  MoEmployeeList.md  MoEmployeeMove.md  MoEmployeeMoveMany.md  MoEmployeePicker.md  MoEmployeeTerminate.md  MoEmployeeWorkflows.md  MoEngagementEntry.md  MoEngagementPicker.md  MoEntryCreateModal.md  MoEntryEditModal.md  MoEntryModal.md  MoEntryTerminateModal.md  (+62 more)
lora_connector/: pyproject.toml
lora_connector/lora_connector/: __init__.py  async_util.py  exceptions.py  lora.py  util.py
ra-data-models/: .gitlab-ci.yml  CHANGELOG.md  README.md  RELEASE.md  mypy.ini  pyproject.toml
(+3440 files in other folders)
