# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "OS2mo"
version = "0.0.0"                                           # versioning handled by conventional commits
authors = ["Magenta ApS <info@magenta.dk>"]
description = "OS2mo - Medarbejder og Organisation"
license = "MPL-2.0"
documentation = "https://os2mo.readthedocs.io"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo"
keywords = ["os2mo"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.15.1"
python-dateutil = "^2"
# Version 2.9.x always starts a transaction when you connect to a database using a context manager.
# See: https://stackoverflow.com/a/68112827
gunicorn = "^23.0.0"
PyJWT = { extras = ["crypto"], version = "^2.9.0" }
more-itertools = "^9.1.0"
SQLAlchemy = "2.0.38"
SQLAlchemy-Utils = "^0.41.2"
aiohttp = "^3.11.13"
httpx = "^0.27.2"
os2mo-http-trigger-protocol = "^0.0.4"
fastapi = "^0.115"
Jinja2 = "^3.1.2"
starlette-context = "^0.3.6"
click = "^8.1.7"
structlog = "^24"
python-multipart = "^0.0.9"
prometheus-fastapi-instrumentator = "^7"
pydantic = { extras = ["email"], version = "^1.10.13" }
uvicorn = "^0.23.2"
strawberry-graphql = "^0.237.1"
jsonschema = "^4.20.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.34.0" }
psycopg = "^3.1.13"
service-person-stamdata-udvidet = "^1.0.3"
fastramqpi = "^10.0.7"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"
freezegun = "^1.2.2"
pytest = "^8"
pytest-asyncio = "^0.24"
pytest-cov = "^5"
pytest-randomly = "^3"
pytest-split = "^0.8"
pytest-subtests = "^0.11"
pytest-timeouts = "^1"
aioresponses = "^0.7.4"
parameterized = "^0.9.0"
hypothesis = "^6.82.0"
hypothesis-graphql = "^0.10.0"
"tap.py" = "^3.1"
asgi-lifespan = "^2.1.0"
respx = "^0.21.1"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^4"
ruff = "^0.9"
mypy = "^1"
pyupgrade = "^3"
types-python-dateutil = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integration_test: mark test as an integration test"]
filterwarnings = ["ignore::pytest.PytestCacheWarning"]
asyncio_mode = "auto"
cache_dir = ".pytest_cache"

[tool.mypy]
ignore_errors = true
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]

[[tool.mypy.overrides]]
module = "mora.graphapi.*"
disallow_untyped_defs = true
ignore_errors = false

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.report]
# Regexes inspired from: https://coverage.readthedocs.io/en/latest/excluding.html
exclude_also = [
    # pragma comments to turn coverage on and off:
    'coverage: pause(?s:.)*?coverage: unpause',
    # pragma comment to excludes an entire file
    '\A(?s:.*# pragma: no cover file.*)\Z',
]
