# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "mo_ldap_import_export"
version = "0.0.0" # versioning handled by conventional commits
description = "Rammearkitektur AMQP service for making AMQP messages on changing effects in os2mo."
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^25"
fastramqpi = "^14.2"
pydantic = "^1"
pyyaml = "^6"
gql = "^3"
more-itertools = "^10"
uvicorn = "^0.34"
fastapi = "^0.115"
ldap3 = "^2"
httpx = "^0.27"
# pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
pycryptodome = "^3"
jinja2 = "^3"
sqlalchemy = "^2"
websockets = "^13"
pyasn1 = "^0.6.1"
typer = "^0.16.0"

[tool.poetry.group.pre-commit.dependencies]
mypy = "^1"
types-tqdm = "^4"
types-ldap3 = "^2"
types-pyyaml = "^6"
pre-commit = "^3"
pandas-stubs = "^2"
ruff = "^0.6"
websockets = "^13"
deptry = "^0.20"

[tool.poetry.group.test.dependencies]
mergedeep = "^1"
pytest = "^8"
pytest-asyncio = "^0.24"
pytest-cov = "^5"
pytest-split = "^0.9"
pytest-xdist = "^3"
pytest-freezer = "^0.4.9"

[tool.poetry.group.dev.dependencies]
debugpy = "^1"
ariadne-codegen = "^0.7"
respx = "^0.21"
rich = "^13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "False"  # TODO: Turn on
disallow_untyped_defs = "False"  # TODO: Turn on
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 999
exclude = [
    ".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]

[tool.ariadne-codegen]
target_package_name = "autogenerated_graphql_client"
target_package_path = "mo_ldap_import_export/"
client_name = "GraphQLClient"
# Produced using: curl -O https://moradev.magentahosted.dk/graphql/v25/schema.graphql
schema_path = "schema.graphql"
queries_path = "queries"
plugins = [
    # Return values directly when only a single top field is requested
    "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
    # Add UNSET and UnsetType to generated input types
    "fastramqpi.ariadne.UnsetInputTypesPlugin",
]
include_comments = false
[tool.ariadne-codegen.scalars.DateTime]
type = "datetime.datetime"
parse = "fastramqpi.ariadne.parse_graphql_datetime"
[tool.ariadne-codegen.scalars.UUID]
type = "uuid.UUID"
[tool.ariadne-codegen.scalars.CPR]
type = "..types.CPRNumber"


[tool.coverage.report]
omit = [
  "mo_ldap_import_export/autogenerated_graphql_client/*",
  "mo_ldap_import_export/depends.py",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
  # pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
  "pycryptodome",
  # uvicorn is used by the Dockerfile
  "uvicorn",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
ignore = [
  # Allow function calls in arguments, like `Depends(...)`
  "B008",
  # Allow lines longer than 90 characters if ruff-format decides so
  "E501"
]

[tool.ruff.lint.isort]
force-single-line = true
