# SPDX-FileCopyrightText: 2017-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0

[tool.poetry]
name = "lora_connector"
version = "0.1.0"
description = ""
authors = ["Emil Madsen <sovende@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
