# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "ramodels"
version = "0.0.0" # versions are controlled by ci release
description = "Pydantic data models for OS2mo"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo"
keywords = ["os2mo", "data models"]
packages = [ { include = "ramodels" } ]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
more-itertools = "^9.0.0"
python-dateutil = "^2.8.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
reorder-python-imports = "^3.9.0"
pre-commit = "^2.20.0"
hypothesis = "6.56.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"
pytest-split = "^0.8.0"
pydocstyle = "^6.1.1"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"

[tool.poetry.scripts]
lorafetch = 'ramodels.fetch:gen_models'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
